# fvcomersem-viz

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  environment-dev.yml  environment.yml  pyproject.toml
.clean/: pyvenv.cfg
.github/workflows/: build-test.yml  conda-ci.yml  publish.yml
data/shapefiles/: central_basin_single.shp  central_basin_single.shx  east_basin_single.shp  east_basin_single.shx  west_basin_single.dbf  west_basin_single.shp  west_basin_single.shx
examples/: .nfs000000000069616d00000612  .nfs000000000069617a0000061e  plot_animations.py  plot_bars.py  plot_box.py  plot_bubbles.py  plot_bubbles_3D.py  plot_composition.py  plot_curves.py  plot_fvcom.py  plot_hovmoller.py  plot_kde.py  plot_maps.py  plot_station_mean.py  plot_timeseries.py  tutorial.py
notebooks/: clear_notebook_outputs.sh  plot_animations.ipynb  plot_composition.ipynb  plot_curves.ipynb  plot_hovmoller.ipynb  plot_kde.ipynb  plot_maps.ipynb  plot_timeseries.ipynb  quickstart_tutorial.ipynb  tutorial.ipynb
src/: .gitignore
src/fvcomersemviz/: __init__.py  io.py  plot.py  regions.py  utils.py
src/fvcomersemviz/plots/: __init__.py  animate.py  bars_box.py  bubbles.py  bubbles_3D.py  composition.py  curves.py  hovmoller.py  kde_stoichiometry.py  maps.py  mass_conservation.py  timeseries.py
tests/: check_install.py  check_install_dev.py  test_imports.py
tools/: export_nc_vars.py
