[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fvcomersemviz"
version = "0.0.1"
description = "FVCOM-ERSEM visualisation utilities"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Molly James" }]
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = [
  "examples/",
  "notebooks/",
]

[tool.ruff.format]
exclude = [
  "examples/",
  "notebooks/",
]

